--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,10 +22,10 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_BUILD_TYPE Debug)
 
 # Cube file name without .ioc extension
-project(blackpill_test C CXX ASM)
+project(tracer C CXX ASM)
 
 # Set the board version to an empty string if your board doesn't have a version
-set(BOARD_VERSION "v1")
+set(BOARD_VERSION "v2")
 
 # Device Configuration
 set(DEVICE_CORTEX F4)
