🚚 Change project name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_BUILD_TYPE Debug)
 
 # Cube file name without .ioc extension
-project(blackpill_test C CXX ASM)
+project(sebastion C CXX ASM)
 
 # Set the board version to an empty string if your board doesn't have a version
 set(BOARD_VERSION "v1")
